updated windows batch script to work with Java 17